--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,7 +14,7 @@
     "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^1.0.6",
-    "@mui/material": "^5.15.7",
+    "@mui/material": "^5.15.9",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.1.0",
+    "fontawesome": "^5.6.3",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "pg": "^8.11.3",
