--- a/my-app/package.json
+++ b/my-app/package.json
@@ -33,6 +33,9 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.1.0",
     "fontawesome": "^5.6.3",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "pg": "^8.11.3",
