--- a/my-app/package.json
+++ b/my-app/package.json
@@ -26,6 +26,8 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/print": "^3.12.0",
     "@remixicon/react": "^4.1.1",
     "@supabase/supabase-js": "^2.39.2",
     "@tremor/react": "^3.13.4",
@@ -43,6 +45,7 @@
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
+    "react-pdf": "^7.7.1",
     "recoil": "^0.7.7",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
