--- a/my-app/package.json
+++ b/my-app/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/print": "^3.12.0",
+    "@react-pdf/renderer": "^3.3.8",
     "@remixicon/react": "^4.1.1",
     "@supabase/supabase-js": "^2.39.2",
     "@tremor/react": "^3.13.4",
@@ -37,15 +38,15 @@
     "date-fns": "^3.1.0",
     "fontawesome": "^5.6.3",
     "html2canvas": "^1.4.1",
+    "html2pdf-react": "^0.0.3",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "pg": "^8.11.3",
-    "react": "^18",
     "react-day-picker": "^8.10.0",
-    "react-dom": "^18",
     "react-pdf": "^7.7.1",
+    "react-to-print": "^2.15.1",
     "recoil": "^0.7.7",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
@@ -60,6 +61,8 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "prisma": "^5.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
