--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.15.9",
     "@prisma/client": "^5.7.1",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
@@ -33,6 +34,7 @@
     "@supabase/supabase-js": "^2.39.2",
     "@tremor/react": "^3.13.4",
     "@vercel/postgres": "^0.5.1",
+    "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.1.0",
