--- a/my-app/package.json
+++ b/my-app/package.json
@@ -45,6 +45,7 @@
     "jspdf": "^2.5.1",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
+    "pdfmake": "^0.2.9",
     "pg": "^8.11.3",
     "react-day-picker": "^8.10.0",
     "react-pdf": "^7.7.1",
