--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,13 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
-    "@heroicons/react": "^1.0.6",
-    "@mui/material": "^5.15.9",
-    "@prisma/client": "^5.7.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -26,29 +20,18 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@react-pdf-viewer/core": "^3.12.0",
-    "@react-pdf-viewer/print": "^3.12.0",
     "@react-pdf/renderer": "^3.3.8",
-    "@remixicon/react": "^4.1.1",
     "@supabase/supabase-js": "^2.39.2",
     "@tremor/react": "^3.13.4",
-    "@vercel/postgres": "^0.5.1",
-    "chart.js": "^4.4.1",
+    "autoprefixer": "^10.4.18",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.1.0",
-    "fontawesome": "^5.6.3",
     "html2canvas": "^1.4.1",
-    "html2pdf-react": "^0.0.3",
-    "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
-    "pdfmake": "^0.2.9",
-    "pg": "^8.11.3",
     "react-day-picker": "^8.10.0",
-    "react-pdf": "^7.7.1",
     "react-to-print": "^2.15.1",
     "recoil": "^0.7.7",
     "tailwind-merge": "^2.2.0",
@@ -56,17 +39,14 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
-    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "prisma": "^5.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack-bundle-analyzer": "^4.10.1"
   }
 }
