--- a/.github/actions/supabaseBackups.yml
+++ b/.github/actions/supabaseBackups.yml
@@ -2,19 +2,19 @@ name: Supa-backup
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *' # Runs every day at midnight
-jobs:   
+    - cron: "0 0 * * *" # Runs every day at midnight
+jobs:
   run_db_backup:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     env:
-      supabase_db_url: ${{ secrets.SUPABASE_DB_URL }}   # For example: postgresql://postgres:[YOUR-PASSWORD]@db.<ref>.supabase.co:5432/postgres
+      supabase_db_url: ${{ secrets.SUPABASE_DB_URL }} # For example: postgresql://postgres:[YOUR-PASSWORD]@db.<ref>.supabase.co:5432/postgres
     steps:
       - uses: actions/checkout@v3
         with:
@@ -32,3 +32,4 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Supabase backup
+# postgres://postgres.tzwvotqajgqmmrucxqeq:1QB1iujKLPoHIYga@aws-0-eu-west-2.pooler.supabase.com:5432/postgres
