--- a/.github/actions/supabaseBackups.yml
+++ b/.github/actions/supabaseBackups.yml
@@ -14,7 +14,7 @@ jobs:
     permissions:
       contents: write
     env:
-      supabase_db_url: ${{ secrets.SUPABASE_DB_URL }} # For example: postgresql://postgres:[YOUR-PASSWORD]@db.<ref>.supabase.co:5432/postgres
+      supabase_db_url: ${{ secrets.SUPABASE_DB_URL }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -32,4 +32,3 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Supabase backup
-# postgres://postgres.tzwvotqajgqmmrucxqeq:1QB1iujKLPoHIYga@aws-0-eu-west-2.pooler.supabase.com:5432/postgres
