--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/tailwindcss": "^0.2.0",
+    "@million/lint": "^0.0.73",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -30,6 +31,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.303.0",
+    "million": "^3.0.6",
     "next": "14.0.4",
     "react-day-picker": "^8.10.0",
     "react-to-print": "^2.15.1",
